--- a/public/player2.html
+++ b/public/player2.html
@@ -3,17 +3,46 @@
     <head>
         <script src="js/socket.io.min.js"></script>
         <script src="js/master.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
     <body>
-        <h1>This is the controller client</h1>
+        <div id="contentWrapper">
 
-        <!-- some very nice color buttons -->
-        <button id="moveMaze" style="background-color:red; color:whitesmoke;">Move Maze</button>    
+            <svg id="mazeSVG" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 164 303.7" style="enable-background:new 0 0 164 303.7;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:none;stroke:#ffffff;stroke-width:2;stroke-linecap:square;}
+                    .st1{fill:#b188ff;}
+                    .st2{fill:#ff6464;}
+                </style>
 
+                <g id="Layer_3">
+                    <polyline class="st0" points="130,184.4 146,184.4 146,152.4 130,152.4 130,136.4 130,120.4 130,136.4 98,136.4 98,120.4 50,120.4 50,136.4 66.9,136.4 34,136.4 34,152.4 50.9,152.4 34,152.4 34,169.5 34,136.4 17,136.4 50,136.4 50,88.4 34,88.4 34,105.4 34,88.4 50,88.4 50,120.4 98,120.4 98,104.4 114,104.4 114,120.4 114,104.4 130,104.4 130,72.4 162,72.4 162,136.4 146,136.4 146,87.4 146,136.4 162,136.4 162,232 130,232.4 130,215.4 130,232.4 98,232.4 98,256.2 142,256.2 142,302.2 38,302.2 38,256.2 82,256.2 82,232.4 18,232.4 18,215.4 18,232.4 2,232.4 2,152.4 18,152.4 18,184.4 82,184.4 82,200.4 98.9,200.4 82,200.4 82,184.4 50,184.4 50,168.4 66,168.4 66,152.4 82,152.4 82,135.4 82,152.4 114,152.4 114,168.4 130.9,168.4 114,168.4 114,184.4 98,184.4 98,168.4 81,168.4 98,168.4 98,184.4 114,184.4 114,200.4 146,200.4 146,217.3 146,200.4 114,200.4 114,216.4 34,216.4 34,200.4 17.1,200.4 66.9,200.4 34,200.4 34,216.4 114,216.4 114,152.5 66,152.4 66,168.4 50,168.4 50,184.4 18,184.4 18,152.4 2,152.4 2,72.4 18,72.4 18,120.4 35.1,120.4 18,120.4 18,72.4 66,72.4 66,88.4 82,88.4 82,104.4 65,104.4 82,104.4 82,88.4 115,88.4 66,88.4 66,49.4 22,49.4 22,3.4 126,3.4 126,49.4 82,49.4 82,72.4 129.1,72.4"/>
+                </g>
+
+                <g id="Player1_wrapper">
+                    <rect id="Player1" x="85.7" y="274.7" class="st1" width="8.9" height="8.9" />
+                </g>
+
+                <g id="Doors">
+                    <rect id="area1_1" onClick="svgElementClicked(id)" class="regular" x="73.5" y="217.4" class="st2" width="4.7" height="14"/>
+                    <rect id="area1_2" onClick="svgElementClicked(id)" class="regular" x="101.3" y="217.4" class="st2" width="4.7" height="14"/>
+                </g>
+            </svg>
+
+        </div>
+
+        
+    <script>
+        var player = document.querySelector('#Player1');
+        //console.log(player);
+        //var y = parseFloat(player.getAttributeNS(null, 'y'));
+        player.setAttributeNS(null, 'y', 290);
+    </script>
+    
         <!-- scripts go to bottom if you want them to execute AFTER the rest of the web page renders -->
 
         <script>
-            senderID = 'player2';            
+            userID = 'player2';            
         </script>
 
         <script src="js/eventSender.js"></script>
@@ -21,3 +50,14 @@
 
     </body>
 </html>
+
+
+
+        <!--
+        <div id="mazeBackground">
+            <button id="open_left" class="button" style="background-color:red; color:whitesmoke;">Open Left</button>
+            <img id="mazeMap" class="button" src="assets/images/maze.svg"/>
+            <button id="open_center" class="button" style="background-color:red; color:whitesmoke;">Open Center</button>    
+            <button id="open_right" style="background-color:red; color:whitesmoke;">Open Right</button>  
+        </div>
+        -->
