--- a/public/player2.html
+++ b/public/player2.html
@@ -23,9 +23,14 @@
                     <rect id="Player1" x="85.7" y="274.7" class="st1" width="8.9" height="8.9" />
                 </g>
 
-                <g id="Doors">
+                <g id="Doors" >
+                    <rect id="areaStart" onClick="svgElementClicked(id)" class="regular" x="83" y="248" class="st2" width="14" height="4.7"/>
                     <rect id="area1_1" onClick="svgElementClicked(id)" class="regular" x="73.5" y="217.4" class="st2" width="4.7" height="14"/>
                     <rect id="area1_2" onClick="svgElementClicked(id)" class="regular" x="101.3" y="217.4" class="st2" width="4.7" height="14"/>
+                    <rect id="area2_1" onClick="svgElementClicked(id)" class="regular" x="138" y="185.4" class="st2" width="4.7" height="14"/>
+                    <rect id="area2_2" onClick="svgElementClicked(id)" class="regular" x="147" y="176" class="st2" width="14" height="4.7"/>
+                    <rect id="area3_1" onClick="svgElementClicked(id)" class="regular" x="21.5" y="121.4" class="st2" width="4.7" height="14"/>
+                    <rect id="area3_2" onClick="svgElementClicked(id)" class="regular" x="3" y="112" class="st2" width="14" height="4.7"/>
                 </g>
             </svg>
 
