added timer functionality for fun at the end. made it so you can close the final door on them as player 2 if they dont make it on time

--- a/public/player2.html
+++ b/public/player2.html
@@ -31,6 +31,7 @@
                     <rect id="area2_2" onClick="svgElementClicked(id)" class="regular" x="147" y="176" class="st2" width="14" height="4.7"/>
                     <rect id="area3_1" onClick="svgElementClicked(id)" class="regular" x="21.5" y="121.4" class="st2" width="4.7" height="14"/>
                     <rect id="area3_2" onClick="svgElementClicked(id)" class="regular" x="3" y="112" class="st2" width="14" height="4.7"/>
+                    <rect id="endDoor" onClick="svgElementClicked(id)" class="regular" x="67" y="52" class="st2" width="14" height="4.7"/>
                 </g>
             </svg>
 
